samples/_failures_safe/1761077736_c6a0ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc4a5226.c: In function ‘main’:
./samples/SAFE/__tmp_fc4a5226.c:144:16: error: missing terminating " character
  144 |         printf("Failed to read second matrix
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fc4a5226.c:144:9: error: expected expression at end of input
  144 |         printf("Failed to read second matrix
      |         ^~~~~~
./samples/SAFE/__tmp_fc4a5226.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc4a5226.c:144:9: error: expected declaration or statement at end of input
